Add a modified orchil.js since I'll need to modify that, start adding Jitsi UI modifications

--- a/root/usr/Gables/data/www/gables.css
+++ b/root/usr/Gables/data/www/gables.css
@@ -19,6 +19,15 @@
 
 #map_area {border: 1px solid  #666666; background: rgba(0, 0, 0, 0.5); overflow:hidden; margin:7px auto; width: 120px; height: 120px; position:relative;}
 
+/* Normally this will be overridden, but it needs to be opaque */
+#mainclient: {
+	background-color: #fff;
+}
+#meet {
+	position: absolute;
+	z-index: -5;
+}
+
 .button {
 	width: 130px;
 	display:inline-block;
