--- a/root/usr/Gables/data/www/gables.css
+++ b/root/usr/Gables/data/www/gables.css
@@ -17,6 +17,14 @@
 	#comp_s  {right:60px;	bottom:12px;}
 	#comp_se {right:1px;	bottom:12px;}
 
+#mute_button.muted: {
+	color: #222;
+}
+
+#mute_button.unmuted {
+	color: #EEE;
+}
+
 #map_area {border: 1px solid  #666666; background: rgba(0, 0, 0, 0.5); overflow:hidden; margin:7px auto; width: 120px; height: 120px; position:relative;}
 
 /* Normally this will be overridden, but it needs to be opaque */
