--- a/root/usr/Gables/data/www/gables.css
+++ b/root/usr/Gables/data/www/gables.css
@@ -25,6 +25,10 @@
 	color: #DDD;
 }
 
+#audio_input_devices {
+	max-width: 95%;
+}
+
 #map_area {border: 1px solid  #666666; background: rgba(0, 0, 0, 0.5); overflow:hidden; margin:7px auto; width: 120px; height: 120px; position:relative;}
 
 /* Normally this will be overridden, but it needs to be opaque */
