--- a/root/usr/Gables/data/www/gables.css
+++ b/root/usr/Gables/data/www/gables.css
@@ -17,7 +17,50 @@
 	#comp_s  {right:60px;	bottom:12px;}
 	#comp_se {right:1px;	bottom:12px;}
 
+/* The microphone mute button shows whether you have *self*-muted */
+.audible #mute_button.muted: {
+	color: #444;
+}
+
+.audible #mute_button.unmuted {
+	color: #DDD;
+}
+
+.silenced #mute_button.muted: {
+	color: #888;
+}
+
+.silenced #mute_button.unmuted {
+	color: #AAA;
+}
+
+.silenced #chat_indicator {
+	color: #888;
+}
+
+/* Chat indicator shows *server* mute/unmute */
+.audible #chat_indicator.muted {
+	color: #444;
+}
+
+.audible #chat_indicator.unmuted {
+	color: #DDD;
+}
+
+#audio_input_devices {
+	max-width: 95%;
+}
+
 #map_area {border: 1px solid  #666666; background: rgba(0, 0, 0, 0.5); overflow:hidden; margin:7px auto; width: 120px; height: 120px; position:relative;}
+
+/* Normally this will be overridden, but it needs to be opaque */
+#mainclient {
+	background-color: #fff;
+}
+#meet {
+	position: absolute;
+	z-index: -5;
+}
 
 .button {
 	width: 130px;
